--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-numpy
-scikit-learn
-matplotlib
+streamlit>=1.33
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+matplotlib==3.8.4
+
