--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,7 +1,6 @@
---only-binary=:all:
-streamlit==1.49.1
-pandas==2.3.2
-numpy==2.1.2
-scipy==1.14.1
-scikit-learn==1.5.2
-matplotlib==3.9.2
+streamlit>=1.33
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+matplotlib==3.8.4
+
